# briny

./: CHANGELOG.md  Cargo.toml  README.md
crates/briny/: Cargo.toml
crates/briny-macros/: Cargo.toml
crates/briny-macros/src/: lib.rs
crates/briny/src/raw/: cast.rs
crates/briny/tests/: casts.rs
examples/: struct.rs
src/: lib.rs  pack.rs  prelude.rs  raw.rs  traits.rs  trust.rs  valid.rs
src/raw/: cast.rs  casting.rs  cell.rs  darc.rs  mod.rs  naarc.rs  ptr.rs
src/ub/: mod.rs
tests/: basic.rs  byte.rs  casts.rs  chunks.rs  edge.rs  lifetimes.rs  pack.rs  validation.rs
