[package]
name = "briny-macros"
version = "0.4.0"
edition = "2021"
rust-version = "1.83.0"
description = "Low-level enforcement of memory layout representation and integrity"
license = "MIT"
documentation = "https://docs.rs/briny-macros"
keywords = ["repr", "layout", "no_std", "memory", "no_alloc"]
categories = [
    "no-std",
    "embedded",
    "data-structures",
    "memory-management",
    "no-std::no-alloc",
]
repository = "https://github.com/bobbothe2nd/briny"
readme = "../../README.md"
